--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -24,6 +24,8 @@
     "blo": "~1.2.0",
     "burner-connector": "0.0.16",
     "daisyui": "5.0.9",
+    "jotai": "^2.12.5",
+    "kaplay": "^3001.0.19",
     "kubo-rpc-client": "~5.0.2",
     "next": "~15.2.3",
     "next-nprogress-bar": "~2.3.13",
