--- a/package.json
+++ b/package.json
@@ -56,5 +56,11 @@
   "packageManager": "yarn@3.2.3",
   "engines": {
     "node": ">=20.18.3"
+  },
+  "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.2.8",
+    "@tanstack/react-query": "^5.83.0",
+    "ethers": "^6.15.0",
+    "wagmi": "^2.15.6"
   }
 }
