--- a/package.json
+++ b/package.json
@@ -62,5 +62,9 @@
     "@tanstack/react-query": "^5.83.0",
     "ethers": "^6.15.0",
     "wagmi": "^2.15.6"
+  },
+  "resolutions": {
+    "@rainbow-me/rainbowkit": "2.2.8",
+    "wagmi": "2.15.6"
   }
 }
